Use Java 8 compatible code